.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gotd-sandbox
  name: testbot
  labels:
    app: testbot
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: testbot
  template:
    metadata:
      labels:
        app: testbot
    spec:
      volumes:
        - name: cache
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: bot
          image: ghcr.io/gotd/testbot:main
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 400m
              memory: 128M
          volumeMounts:
            - mountPath: /cache
              name: cache
