.k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gotd-sandbox
  name: bot
  labels:
    app: bot
    prometheus: "true"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
    - port: 8080
      protocol: TCP
      targetPort: 8090
      name: metrics
  selector:
    app: bot
  sessionAffinity: None
