.k8s/cnp.egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: echobot-egress-dns
  namespace: gotd-sandbox
spec:
  podSelector:
    matchLabels:
      app: echobot
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
