.k8s/cnp.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testbot-ingress
  namespace: gotd-sandbox
spec:
  podSelector:
    matchLabels:
      app: testbot
  policyTypes:
    - Ingress
  ingress: []
